[gd_scene load_steps=12 format=2]

[ext_resource path="res://ingame_ui_script.gd" type="Script" id=1]
[ext_resource path="res://Arts/Fonts/dpcomic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Arts/Fonts/dpcomic.tres" type="DynamicFont" id=3]
[ext_resource path="res://Arts/Fonts/joystix_monospace.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Arts/Fonts/joystick_monospace.tres" type="DynamicFont" id=5]
[ext_resource path="res://Arts/Fonts/game_over.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
extra_spacing_top = -12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 200
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 120
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GoldColorRect" type="ColorRect" parent="."]
margin_right = 316.0
margin_bottom = 168.0
color = Color( 0.815686, 0.588235, 0.054902, 0.0588235 )

[node name="label" type="RichTextLabel" parent="GoldColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 115.0
margin_right = 5.0
margin_bottom = 135.0
custom_colors/default_color = Color( 0.815686, 0.588235, 0.054902, 1 )
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/bold_italics_font = ExtResource( 3 )
custom_fonts/italics_font = ExtResource( 3 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
text = "Gold Count"

[node name="GoldCount" type="RichTextLabel" parent="GoldColorRect"]
margin_left = 40.0
margin_top = 40.0
margin_right = 271.0
margin_bottom = 132.0
custom_colors/default_color = Color( 1, 0.686275, 0.145098, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "1"

[node name="TimerColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_right = 100.0
margin_bottom = 200.0
color = Color( 0.054902, 0.317647, 0.815686, 0.192157 )

[node name="TimeCounter" type="RichTextLabel" parent="TimerColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = -41.0
margin_right = 205.0
margin_bottom = 213.0
custom_fonts/normal_font = SubResource( 2 )
text = "5"

[node name="label" type="RichTextLabel" parent="TimerColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_top = 172.0
margin_right = 126.0
margin_bottom = 233.0
custom_fonts/normal_font = ExtResource( 5 )
text = "Timer"

[node name="MovePointsColorRect" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
color = Color( 0.152941, 0.52549, 0.156863, 0.0470588 )

[node name="MovingPoints" type="RichTextLabel" parent="MovePointsColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = 109.0
custom_fonts/normal_font = SubResource( 3 )
text = "1"

[node name="MovingPointsMax" type="RichTextLabel" parent="MovePointsColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 3.0
margin_top = 74.0
margin_right = 99.0
margin_bottom = 158.0
custom_fonts/normal_font = SubResource( 4 )
text = "5"

[node name="label" type="RichTextLabel" parent="MovePointsColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -67.0
margin_top = 148.0
margin_right = 229.0
margin_bottom = 209.0
custom_fonts/normal_font = SubResource( 5 )
text = "Move  points"
